--- a/build.gradle
+++ b/build.gradle
@@ -76,9 +76,8 @@ dependencies {
     // Placeholders
     compileOnly 'me.clip:placeholderapi:2.10.3'
     // QuickShop
-    compileOnly('org.maxgamer:QuickShop:5.1.0.0-SNAPSHOT') {
-        transitive = false
-    }
+//    compileOnly('com.ghostchu:quickshop-api:6.2.0.0')
+    compileOnly('com.ghostchu:quickshop-bukkit:6.2.0.0:shaded')
     // PaperLib
     implementation "io.papermc:paperlib:1.0.7"
     // Annotations
