--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import io.papermc.paperweight.userdev.ReobfArtifactConfiguration
+
 plugins {
     id("io.github.goooler.shadow") version "8.1.8"
     id 'java-library'
@@ -10,10 +12,6 @@ version = pluginVersion
 
 compileJava {
     options.release.set(21)
-}
-
-tasks.assemble {
-    dependsOn(tasks.reobfJar)
 }
 
 repositories {
@@ -49,6 +47,7 @@ compileJava {
     options.compilerArgs += ["-parameters"]
 }
 
+paperweight.reobfArtifactConfiguration = ReobfArtifactConfiguration.getMOJANG_PRODUCTION()
 dependencies {
     // Paper API
 //    compileOnly 'io.papermc.paper:paper-api:1.21-R0.1-SNAPSHOT'
